--- a/index.html
+++ b/index.html
@@ -1,10 +1,126 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>123456</h1>
-  </body>
+<html lang="en">
+
+<head>
+    <script src="https://kit.fontawesome.com/0491a5b8cc.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="smallLin.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="mobileMenu">
+        <input type="text">
+    </div>
+
+    <header class="header">
+        <div class="ham"><i class="fas fa-bars hamberg  "></i></div>
+
+        <div class="header__logo "> <img class="header__logo logo" src="pic/smallLin.jpeg" alt=""></div>
+
+        <nav class="nav header__nav">
+            <ul class="nav nav__list">
+                <li class="nav__item">
+                    <a class="nav nav__link " href=" ">網路商店</a>
+
+                </li>
+                <li class="nav__item subMenu">
+                    <a class="nav nav__link   " href=" ">
+                        專業教室</a>
+                    <div class="dropDown">
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">視力保健室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">鏡框教室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">鏡片教室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">多交鏡片教室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">濾藍光晶片教室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">隱形眼鏡教室</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">太陽眼鏡教室</a>
+                        </div>
+                    </div>
+
+                </li>
+                <li class="nav__item">
+                    <a class="nav nav__link " href=" ">門市查詢</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav nav__link " href=" ">最新消息</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav nav__link " href=" "> 顧客服務</a>
+                </li>
+                <li class="nav__item"><a class="nav nav__link" href=" ">連絡小林</a>
+                </li>
+
+                <span style="color:cornsilk;">  <i class="fas fa-search"></i></span>
+
+            </ul>
+
+        </nav>
+        <!-- <span style="color:cornsilk;">  <i class="header__ham fas fa-bars"></i></span> -->
+        <nav class=" tool">
+            <div class="tool__search">
+                <i class="fas fa-search search__icon"></i>
+                <p>
+                    <span class=" tool__search__ch">全站搜尋</span><span class=" tool__search__en">SEARCH</span>
+                </p>
+
+            </div>
+            <div class="tool__member">
+                <span style=" color: rgb(255, 255, 255);">
+               <i class="fas fa-user-alt member__icon "></i></span>會員中心</div>
+
+            <div class="tool__kart">
+                <span style=" color: rgb(255, 255, 255);">
+                <i class="fas fa-shopping-cart kart__icon"></i></span>購物車</div>
+        </nav>
+
+
+    </header>
+
+
+
+
+    <!-- 
+    <div style="display: inline-flex;width:80px;margin-top: 200px;background-color: rgb(255, 177, 177);height: 70px;flex-direction: column;justify-content: center;">
+        <a href="" style="">專業教室</a>
+    </div> -->
+
+
+    <!-- 
+    <div style="margin-top:500px ;display: inline-flex;flex-direction: column;
+    height: 70px;border: 1px solid #000; ">
+        <a href="">23133355</a>
+        <div style="width: 40px;background-color: rgb(4, 0, 255);">1111111111</div>
+        <div style="width: 60px;background-color: crimson;height: 5000px;">1111111111</div>
+    </div> -->
+
+
+
+    <!-- <div style="display: inline-flex;height: 100px;">
+        <div style=" width: 100px; background-color: cornflowerblue;"></div>
+        <div style=" width:100px;height: 200px; background-color: cornflowerblue;">123456</div>
+        <div style=" width:100px;height: 200px; background-color: cornflowerblue;">123646546</div>
+    </div> -->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <script src="smallLin.js"></script>
+</body>
+
 </html>
