--- a/index.html
+++ b/index.html
@@ -19,12 +19,29 @@
     <header class="header">
         <div class="ham"><i class="fas fa-bars hamberg  "></i></div>
 
-        <div class="header__logo "> <img class="header__logo logo" src="pic/smallLin.jpeg" alt=""></div>
+        <div class="header__logo "> <img class="header__logo " src="pic/smallLin.jpeg" alt=""></div>
 
         <nav class="nav header__nav">
             <ul class="nav nav__list">
-                <li class="nav__item">
+                <li class="nav__item ecommerce">
                     <a class="nav nav__link " href=" ">網路商店</a>
+                    <div class="dropDown__full">
+                        <div class=" list">
+                            <div class=" item"><i class="fas fa-glasses"></i>
+                                <span>光學眼鏡</span>
+                            </div>
+                            <div class=" item"><i class="fas fa-recycle"></i><span>隱形眼鏡(透明)</span></div>
+                            <div class=" item"><i class="fas fa-pills"></i><span>保健食品/其他</span></div>
+                            <div class="item"><i class="fas fa-sun"></i>
+                                <span> 太陽眼鏡</span>
+                            </div>
+                            <div class="item"><i class="fas fa-camera-retro"></i><span> 隱形眼鏡(彩色)</span></div>
+                        </div>
+
+
+                        <img class="adImg" src="pic/flower.jpeg" alt="ad">
+
+                    </div>
 
                 </li>
                 <li class="nav__item subMenu">
@@ -92,7 +109,6 @@
 
 
     </header>
-
 
 
 
