--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="smallLin.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Document</title>
 </head>
 
@@ -109,6 +110,21 @@
 
 
     </header>
+
+
+    <footer class="footer">
+        <div class="containner">
+            <img src="pic/ig_icon.jpg" alt="" class="socialIcon">
+            <img src="pic/fb_icon.png" alt="" class="socialIcon">
+            <img src="pic/yt_icon.jpg" alt="" class="socialIcon"></div>
+
+        <p><pre class="containner__text"> 台北市南港路二段97號7樓  |  電話:(02)2651-3858  |  傳真:(02)2651-3878  |  免費服務:0800-016-883</pre>
+            <pre class="containner__text">7F.No.97,Sec.2,Nangang Dist, Taipei City 115, Taiwan (R.O.C)</pre>
+            <pre class="containner__text">退換貨通知  |  使用條款  |  隱私政策</pre>
+            <pre class="containner__text">Copyright c 2017 Kobayashi Optical Co,Ltd. DESIGN BY BEGONIA</pre>
+        </p>
+
+    </footer>
 
 
 
