--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <p><pre class="containner__text"> 台北市南港路二段97號7樓  |  電話:(02)2651-3858  |  傳真:(02)2651-3878  |  免費服務:0800-016-883</pre>
             <pre class="containner__text">7F.No.97,Sec.2,Nangang Dist, Taipei City 115, Taiwan (R.O.C)</pre>
             <pre class="containner__text">退換貨通知  |  使用條款  |  隱私政策</pre>
-            <pre class="containner__text">Copyright c 2017 Kobayashi Optical Co,Ltd. DESIGN BY BEGONIA</pre>
+            <pre class="containner__text">Copyright© 2017 Kobayashi Optical Co,Ltd. DESIGN BY BEGONIA</pre>
         </p>
 
     </footer>
