--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="nav__item subMenu">
                     <a class="nav nav__link   " href=" ">
                         專業教室</a>
-                    <div class="dropDown">
+                    <div class="dropDown__class">
                         <div class="dropDown__menu">
                             <a href="" class="dropDown__menu">視力保健室</a>
                         </div>
@@ -79,8 +79,24 @@
                 <li class="nav__item">
                     <a class="nav nav__link " href=" ">最新消息</a>
                 </li>
-                <li class="nav__item">
+                <li class="nav__item subMenu">
                     <a class="nav nav__link " href=" "> 顧客服務</a>
+                    <div class="dropDown__service">
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">會員卡介紹</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">電子保證書</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">常見問題</a>
+                        </div>
+                        <div class="dropDown__menu">
+                            <a href="" class="dropDown__menu">連絡小林</a>
+                        </div>
+
+                    </div>
+
                 </li>
                 <li class="nav__item"><a class="nav nav__link" href=" ">連絡小林</a>
                 </li>
@@ -111,17 +127,44 @@
 
     </header>
 
+    <div class="express__hint">
+        <i class="fas fa-fist-raised"></i>
+        <span>快速專區</span>
+        <span>寶島眼鏡</span>
+    </div>
+    <div class="containner__express">
+        <div class="express">
+            <i class="fas fa-store  shopIcon"></i>
+            <div class="ecommerce__sub strong">網路商店</div>
+            <div class="ecommerce__sub">多種竟價款式，獨家熱銷商品，可依您的需求輕鬆選擇</div>
+        </div>
+        <div class="express">
+            <i class="fas fa-store  shopIcon"></i>
+            <div class="ecommerce__sub strong">據點查詢</div>
+            <div class="ecommerce__sub">全國小林眼鏡門市資訊查詢，或尋找離您最近的門市</div>
+        </div>
+        <div class="express">
+            <i class="fas fa-store  shopIcon"></i>
+            <div class="ecommerce__sub strong">顧客專區</div>
+            <div class="ecommerce__sub">可查詢保證書及會員權益等相關資訊，下載手機ＡＰＰ享會員權益</div>
+        </div>
+    </div>
+    <div style=></div>
 
-    <footer class="footer">
-        <div class="containner">
-            <img src="pic/ig_icon.jpg" alt="" class="socialIcon">
-            <img src="pic/fb_icon.png" alt="" class="socialIcon">
-            <img src="pic/yt_icon.jpg" alt="" class="socialIcon"></div>
+    <div style=" height: 2000px; "></div>
 
-        <p><pre class="containner__text"> 台北市南港路二段97號7樓  |  電話:(02)2651-3858  |  傳真:(02)2651-3878  |  免費服務:0800-016-883</pre>
-            <pre class="containner__text">7F.No.97,Sec.2,Nangang Dist, Taipei City 115, Taiwan (R.O.C)</pre>
-            <pre class="containner__text">退換貨通知  |  使用條款  |  隱私政策</pre>
-            <pre class="containner__text">Copyright© 2017 Kobayashi Optical Co,Ltd. DESIGN BY BEGONIA</pre>
+
+
+    <footer class="footer ">
+        <div class="containner ">
+            <img src="pic/ig_icon.jpg " alt=" " class="socialIcon ">
+            <img src="pic/fb_icon.png " alt=" " class="socialIcon ">
+            <img src="pic/yt_icon.jpg " alt=" " class="socialIcon "></div>
+
+        <p><pre class="containner__text "> 台北市南港路二段97號7樓  |  電話:(02)2651-3858  |  傳真:(02)2651-3878  |  免費服務:0800-016-883</pre>
+            <pre class="containner__text ">7F.No.97,Sec.2,Nangang Dist, Taipei City 115, Taiwan (R.O.C)</pre>
+            <pre class="containner__text ">退換貨通知  |  使用條款  |  隱私政策</pre>
+            <pre class="containner__text ">Copyright© 2017 Kobayashi Optical Co,Ltd. DESIGN BY BEGONIA</pre>
         </p>
 
     </footer>
@@ -129,30 +172,29 @@
 
 
     <!-- 
-    <div style="display: inline-flex;width:80px;margin-top: 200px;background-color: rgb(255, 177, 177);height: 70px;flex-direction: column;justify-content: center;">
-        <a href="" style="">專業教室</a>
+    <div style="display: inline-flex;width:80px;margin-top: 200px;background-color: rgb(255, 177, 177);height: 70px;flex-direction: column;justify-content: center; ">
+        <a href=" " style=" ">專業教室</a>
     </div> -->
 
 
     <!-- 
-    <div style="margin-top:500px ;display: inline-flex;flex-direction: column;
-    height: 70px;border: 1px solid #000; ">
-        <a href="">23133355</a>
-        <div style="width: 40px;background-color: rgb(4, 0, 255);">1111111111</div>
-        <div style="width: 60px;background-color: crimson;height: 5000px;">1111111111</div>
+    <div style="margin-top:500px ;display: inline-flex;flex-direction: column; height: 70px;border: 1px solid #000; ">
+        <a href=" ">23133355</a>
+        <div style="width: 40px;background-color: rgb(4, 0, 255); ">1111111111</div>
+        <div style="width: 60px;background-color: crimson;height: 5000px; ">1111111111</div>
     </div> -->
 
 
 
-    <!-- <div style="display: inline-flex;height: 100px;">
-        <div style=" width: 100px; background-color: cornflowerblue;"></div>
-        <div style=" width:100px;height: 200px; background-color: cornflowerblue;">123456</div>
-        <div style=" width:100px;height: 200px; background-color: cornflowerblue;">123646546</div>
+    <!-- <div style="display: inline-flex;height: 100px; ">
+        <div style=" width: 100px; background-color: cornflowerblue; "></div>
+        <div style=" width:100px;height: 200px; background-color: cornflowerblue; ">123456</div>
+        <div style=" width:100px;height: 200px; background-color: cornflowerblue; ">123646546</div>
     </div> -->
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js " integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin=" anonymous "></script>
 
-    <script src="smallLin.js"></script>
+    <script src="smallLin.js "></script>
 </body>
 
 </html>
