--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="smallLin.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="carousel.css">
     <title>Document</title>
 </head>
 
@@ -27,20 +28,36 @@
                 <li class="nav__item ecommerce">
                     <a class="nav nav__link " href=" ">網路商店</a>
                     <div class="dropDown__full">
+
                         <div class=" list">
-                            <div class=" item"><i class="fas fa-glasses"></i>
-                                <span>光學眼鏡</span>
-                            </div>
-                            <div class=" item"><i class="fas fa-recycle"></i><span>隱形眼鏡(透明)</span></div>
-                            <div class=" item"><i class="fas fa-pills"></i><span>保健食品/其他</span></div>
-                            <div class="item"><i class="fas fa-sun"></i>
-                                <span> 太陽眼鏡</span>
-                            </div>
-                            <div class="item"><i class="fas fa-camera-retro"></i><span> 隱形眼鏡(彩色)</span></div>
+                            <a href="" class="item">
+                                <div class=" item"><i class="fas fa-glasses"></i>
+                                    <span>光學眼鏡</span>
+
+                                </div>
+                            </a>
+                            <a href="" class="item">
+                                <div class=" item"><i class="fas fa-recycle"></i><span>隱形眼鏡(透明)</span></div>
+                            </a>
+
+                            <a href="" class="item">
+                                <div class=" item"><i class="fas fa-pills"></i><span>保健食品/其他</span></div>
+                            </a>
+
+                            <a href="" class="item">
+                                <div class="item"><i class="fas fa-sun"></i>
+                                    <span> 太陽眼鏡</span>
+                                </div>
+                            </a>
+
+                            <a href="" class="item">
+                                <div class="item"><i class="fas fa-camera-retro"></i><span> 隱形眼鏡(彩色)</span></div>
+                            </a>
+
                         </div>
 
-
-                        <img class="adImg" src="pic/flower.jpeg" alt="ad">
+                        <a href="" class="item"> <img class="adImg" src="pic/flower.jpeg" alt="ad">
+                        </a>
 
                     </div>
 
@@ -126,8 +143,25 @@
 
 
     </header>
+    <section class="carousel">
+        <div id="carouselMain" class="carousel__main">
+
+            <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/61054bd4c0c4f.jpg" alt="">
+            <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/60efa4d6e1cff.jpg" alt="">
+            <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/6064099e0caee.jpg" alt="">
+
+        </div>
+        <i class="fas fa-chevron-circle-left carousel__arrow--left"></i>
+        <i class="fas fa-chevron-circle-right carousel__arrow--right"></i>
+        <div class="carousel__dots">
+            <!--     <span class="dot full"></span> -->
+        </div>
+    </section>
+
 
     <div class="express__hint">
+
+
         <i class="fas fa-fist-raised"></i>
         <span>快速專區</span>
         <span>寶島眼鏡</span>
@@ -149,17 +183,38 @@
             <div class="ecommerce__sub">可查詢保證書及會員權益等相關資訊，下載手機ＡＰＰ享會員權益</div>
         </div>
     </div>
-    <div style=></div>
+    <div class="bannerFixed">
+        <img src="pic/smallLin_text.png" alt="">
 
-    <div style=" height: 2000px; "></div>
+    </div>
+    <div class="bannerMiddle">
+        <img src="pic/smallLin02.png" alt="">
+    </div>
+    <div class="ad">
+        <img src=" pic/content_img.jpg " alt=" ">
+        <p class="ad__content ">
+            <span>繼上次教大家高度近視要如何挑選合適的鏡框，這次又要來教大家一個很重要且超級實用的挑框技巧唷！就是~配眼鏡要怎麼挑選最適合自己臉型的鏡框呢！！？<br><br><br><br> 小編因為常常幫客人挑框配眼鏡，還有自己也配了不少支眼鏡，各種眼鏡框型都有XD，所以建立了自己的一套臉型如何配眼鏡方法，十分簡易又好理解喔！現在就馬上來看看吧！</span>
+
+        </p>
+
+    </div>
+
+
+
+
+    <div style="height:800px;width: 100vw;"></div>
+
 
 
 
     <footer class="footer ">
         <div class="containner ">
-            <img src="pic/ig_icon.jpg " alt=" " class="socialIcon ">
-            <img src="pic/fb_icon.png " alt=" " class="socialIcon ">
-            <img src="pic/yt_icon.jpg " alt=" " class="socialIcon "></div>
+            <a href=" "> <img src="pic/ig_icon.jpg " alt=" " class="socialIcon ">
+            </a>
+            <a href=" "> <img src="pic/fb_icon.png " alt=" " class="socialIcon ">
+            </a>
+            <a href=" "> <img src="pic/yt_icon.jpg " alt=" " class="socialIcon "></div>
+        </a>
 
         <p><pre class="containner__text "> 台北市南港路二段97號7樓  |  電話:(02)2651-3858  |  傳真:(02)2651-3878  |  免費服務:0800-016-883</pre>
             <pre class="containner__text ">7F.No.97,Sec.2,Nangang Dist, Taipei City 115, Taiwan (R.O.C)</pre>
