--- a/object_fit.html
+++ b/object_fit.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="carousel.css">
     <title>Document</title>
 </head>
 
@@ -16,6 +17,15 @@
     <img style="width: 300px;height: 300px;border: 1px solid #000;object-position: left top ;" src="pic/ig_icon.jpg" alt="">
 
     <!-- <img style="width: 500px;height: 500px;object-fit: none;border: 1px solid #000;background-attachment: fixed;" src="pic/flower.jpeg" alt=""> -->
+
+
+    <div id="carouselMain" class="carousel__main">
+
+        <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/61054bd4c0c4f.jpg" alt="">
+        <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/60efa4d6e1cff.jpg" alt="">
+        <img class="carousel__img" src="https://www.kobayashi.com.tw/upload/banner_index/6064099e0caee.jpg" alt="">
+
+    </div>
 
 </body>
 
